@@ -10,7 +10,7 @@ hsu.t.test.default <- function (x, y, alternative = c("two.sided", "less", "grea
                                conf.level < 0 || conf.level > 1))
     stop("'conf.level' must be a single number between 0 and 1")
 
-  dname <- paste(deparse(substitute(x)), "and", deparse(substitute(y)))
+  dname <- paste(deparse1(substitute(x)), "and", deparse1(substitute(y)))
   yok <- !is.na(y)
   xok <- !is.na(x)
   y <- y[yok]
